--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <title>pizza-catbot</title>
+    <title>catbot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
